changed img route

--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,16 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <link rel="stylesheet" href="https://shielded-forest-95842.herokuapp.comstylesheets/reset.css">
-     <link rel="stylesheet" href="https://shielded-forest-95842.herokuapp.comstylesheets/style.css">
-     <link rel="stylesheet" href="https://shielded-forest-95842.herokuapp.comstylesheets/header.css">
-     <link rel="stylesheet" href="https://shielded-forest-95842.herokuapp.comstylesheets/algolia_search.css">
+     <link rel="stylesheet" href="https://shielded-forest-95842.herokuapp.com/stylesheets/reset.css">
+     <link rel="stylesheet" href="https://shielded-forest-95842.herokuapp.com/stylesheets/style.css">
+     <link rel="stylesheet" href="https://shielded-forest-95842.herokuapp.com/stylesheets/header.css">
+     <link rel="stylesheet" href="https://shielded-forest-95842.herokuapp.com/stylesheets/algolia_search.css">
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-     <script src="https://shielded-forest-95842.herokuapp.comjavascripts/header.js"></script>
+     <script src="https://shielded-forest-95842.herokuapp.com/javascripts/header.js"></script>
      
      <script src="https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js"></script>
      <script src="https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
-     <script src="https://shielded-forest-95842.herokuapp.comjavascripts/algolia_search.js"></script>
+     <script src="https://shielded-forest-95842.herokuapp.com/javascripts/algolia_search.js"></script>
 
      <title>Automox Documentation</title>
 </head>
