--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -108,7 +108,7 @@
     <p><div class='faq-column'>
     <p><div class="flex-container space-between">
     <div class="icon-container flex-container justify-content-flex-end">
-        <i class='icon-Automox-Icon'></i>
+        <i class='icon-custom-software'></i>
     </div>
     <div class='faq-section'>
         <h2 class="title">What is Automox?</h2>
@@ -118,7 +118,7 @@
 
 <div class="flex-container space-between">
     <div class="icon-container flex-container justify-content-flex-end">
-        <i class='automox-icon'></i>
+        <i class='icon-requirements'></i>
     </div>
     <div class='faq-section'>
         <h2 class="title">What can I tell my employees about the Automox agent if  they are concerned?</h2>
